# relatives

./: .dockerignore  .gitignore  Makefile  README.md  docker-compose.override.yml  docker-compose.yml  example.env  main.py  pyproject.toml  setup.cfg
.github/workflows/: cicd.yml
scripts/: backup.sh  pgpass.sh
src/: nginx.conf
src/backend/: alembic.ini  config.py  deps.py  factory.py  main.py
src/backend/apps/: api_v1.py  ui.py
src/backend/apps/auth/: __init__.py  api.py  emails.py  middleware.py  models.py  schemas.py  ui.py  utils.py
src/backend/apps/core/: api.py  constants.py  emails.py  file.py  models.py  permissions.py  schemas.py  ui.py  utils.py
src/backend/apps/persons/: __init__.py  api.py  constants.py  models.py  schemas.py  ui.py  utils.py
src/backend/apps/tree/: api.py  models.py  schemas.py  ui.py  utils.py
src/backend/db/: __init__.py  init.py  models.py
src/backend/docker/: Dockerfile  entrypoint.sh
src/backend/ext/orm/: fields.py
src/backend/middlewares/: __init__.py  auth.py
src/backend/migrations/: env.py
src/backend/migrations/versions/: 001_initial_b652da8e1cf3.py  002_add_token_358efc539b17.py  004_correct_schema_bafe5b384431.py  005_add_user_tree_to_token_77af9d88be6f.py  006_extend_token_78460b24553b.py  358efc539b17_.py  47f5291659f2_initial.py  5ac70b3bd542_.py  b652da8e1cf3_initial.py
src/backend/static/: robots.txt  sitemap.xml
src/backend/static/css/: headers.css  list.css  login.css
src/backend/static/js/: auth.js  back_main.js  i18n.js  login.js  main.js  new_tree_modal.js  person_detail.js  share_tree_modal.js  tree.js
src/backend/templates/: back_base.html  base.html  delete_person_modal.html  delete_tree_modal.html  index.html  login.html  new_tree_modal.html  password.html  person_detail.html  tree_list.html  tree_scheme.html  verify_email.html
src/backend/templates/email/: invite.html  joined.html  reset_password.html  signup.html
src/backend/templates/modals/: copy_tree_modal.html  delete_person_modal.html  delete_photo_modal.html  delete_tree_modal.html  new_tree_modal.html  share_tree_modal.html
src/backend/templates/public/: empty.html  forgot_password.html  index.html  login.html  reset_password.html
src/backend/tests/: conftest.py  constants.py  settings.py  test_auth.py  test_core.py
src/backend/tests/test_ui/: test_auth.py
src/backend/tools/: datetime.py
src/backend/tools/notifications/: email.py
(+2 files in other folders)
