[tool.poetry]
name = "relatives"
version = "0.1.0"
description = "Build your family tree with Relatives."
authors = ["Denis Kazakov <denis@kazakov.ru.net>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.79.0"
uvicorn = "^0.18.2"
databases = {extras = ["sqlite"], version = "^0.6.1"}
orm = {extras = ["sqlite"], version = "^0.3.1"}
Jinja2 = "^3.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
