[tool.poetry]
name = "relatives"
version = "0.1.0"
description = "Build your family tree with Relatives."
authors = ["Denis Kazakov <denis@kazakov.ru.net>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.79.0"
uvicorn = "^0.18.2"
databases = {extras = ["sqlite"], version = "^0.6.1"}
orm = {extras = ["sqlite"], version = "^0.3.1"}
Jinja2 = "^3.1.2"
alembic = "^1.8.1"
aiocsv = "^1.2.2"
aiofiles = "^0.8.0"

[tool.poetry.dev-dependencies]
flake8 = "^5.0.4"
isort = "^5.10.1"
mypy = "^0.971"
pytest = "^7.1.2"
pytest-asyncio = "^0.19.0"
types-aiofiles = "^0.8.10"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = "3.9"
warn_unused_configs = true

[[tool.mypy.overrides]]
module = ["orm", "sqlalchemy"]
ignore_errors = true
