[tool.poetry]
name = "relatives"
version = "0.1.0"
description = "Build your family tree with Relatives."
authors = ["Denis Kazakov <denis@kazakov.ru.net>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.85.1"
uvicorn = "^0.18.2"
Jinja2 = "^3.1.2"
alembic = "^1.8.1"
aiocsv = "^1.2.2"
aiofiles = "^22.1.0"
pydantic = {extras = ["dotenv"], version = "^1.10.2"}
ormar = {extras = ["postgresql"], version = "^0.12.0"}
sentry-sdk = {extras = ["fastapi"], version = "^1.9.10"}
fastapi-mail = "^1.2.0"
databases = "^0.6.1"

[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"
isort = "^5.10.1"
mypy = "^0.971"
pytest = "^7.1.2"
pytest-asyncio = "^0.19.0"
requests = "^2.28.1"
types-aiofiles = "^0.8.10"
coverage = "^6.5.0"
aiosqlite = "^0.17.0"
ipython = "^8.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true

[[tool.mypy.overrides]]
module = ["ormar", "sqlalchemy"]
ignore_errors = true
